--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="top" class="header">
   <div class="text-vertical-center">
-    <h1>Start Bootstrap</h1>
+    <h1>WingerWinde</h1>
     <h3>Sprache, Spass &amp; me</h3>
     <br>
     <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
