--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,6 +9,7 @@
   {% include header.html %}
   {% include about.html %}
   {% include services.html %}
+  {% include services.html %}
   {% include callout.html %}
   {% include portfolio.html %}
   {% include call-to-action.html %}
