--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,7 +8,7 @@
   {% include navigation.html %}
   {% include header.html %}
   {% include about.html %}
-  {% include services.html %}
+  {% include services Kopie.html %}
   {% include services.html %}
   {% include callout.html %}
   {% include portfolio.html %}
