--- a/_includes/einleitung.html
+++ b/_includes/einleitung.html
@@ -1,20 +1,20 @@
 
-<div class="col-md-6 col-sm-4"><br>
+<div class="">
 <h2> Der Sommer ist zum Spaß haben da!</h2>
 
-<p><em>So sieht wohl die Antwort der meisten Kids aus. Und Spaß haben sie sich nach dem langen Schuljahr auch verdient!</em></p>
+<p>So sieht wohl die Antwort der meisten Kids aus. Und Spaß haben sie sich nach dem langen Schuljahr auch verdient!
 
-<p><em>Wir Eltern wünschen uns dennoch für die langen Sommerferien, dass noch an den <strong>Sprachkenntnissen</strong> unserer Liebsten gefeilt werden könnte. Also kombinieren wir doch unsere Wünsche: <strong>Lernen und Spaß!</strong></em></p>
+Wir Eltern wünschen uns dennoch für die langen Sommerferien, dass noch an den <strong>Sprachkenntnissen</strong> unserer Liebsten gefeilt werden könnte. Also kombinieren wir doch unsere Wünsche: <strong>Lernen und Spaß!</strong>
 
-<p><em>Dass dies wirklich machbar ist, haben uns die letzten vier Jahre gezeigt. Schließlich haben die Kids vor lauter guter Laune gar nicht gespürt, dass sie viel gelernt haben. </em></p>
+Dass dies wirklich machbar ist, haben uns die letzten vier Jahre gezeigt. Schließlich haben die Kids vor lauter guter Laune gar nicht gespürt, dass sie viel gelernt haben. 
 
-<p><em>Auf Wunsch unserer treuen Kids aus den Vorjahren geht es auch im Sommer 2017 weiter! An der Ostsee werden wir wieder <strong>tolle Freizeitaktivitäten</strong> wie Surfen, Klettern, Wasserskifahren und Paddling unternehmen.&nbsp;</em></p>
+Auf Wunsch unserer treuen Kids aus den Vorjahren geht es auch im Sommer 2017 weiter! An der Ostsee werden wir wieder <strong>tolle Freizeitaktivitäten</strong> wie Surfen, Klettern, Wasserskifahren und Paddling unternehmen.&nbsp;
 
-<p><em>Vor allem werden wir aber auch Freundschaft und Teamgeist erleben.</em></p>
+Vor allem werden wir aber auch Freundschaft und Teamgeist erleben.
 
-<p><em>Ich freue mich auf den Sommer!</em></p>
+Ich freue mich auf den Sommer!
 
-<p><em>Herzliche Grüße</em></p>
+Herzliche Grüße
 
-<p><em>Christine Stutterheim </em></p>
+Christine Stutterheim </p>
 </div>
