--- a/_includes/einleitung.html
+++ b/_includes/einleitung.html
@@ -1,5 +1,6 @@
 
-<div class="">
+<div class="container">
+<div class="row">
 <h2> Der Sommer ist zum Spaß haben da!</h2>
 
 <p>So sieht wohl die Antwort der meisten Kids aus. Und Spaß haben sie sich nach dem langen Schuljahr auch verdient!
@@ -10,11 +11,12 @@ Dass dies wirklich machbar ist, haben uns die letzten vier Jahre gezeigt. Schlie
 
 Auf Wunsch unserer treuen Kids aus den Vorjahren geht es auch im Sommer 2017 weiter! An der Ostsee werden wir wieder <strong>tolle Freizeitaktivitäten</strong> wie Surfen, Klettern, Wasserskifahren und Paddling unternehmen.&nbsp;
 
-Vor allem werden wir aber auch Freundschaft und Teamgeist erleben.
+Vor allem werden wir aber auch Freundschaft und Teamgeist erleben.</p>
 
-Ich freue mich auf den Sommer!
+<p>Ich freue mich auf den Sommer!</p>
 
-Herzliche Grüße
+<p>Herzliche Grüße</p>
 
-Christine Stutterheim </p>
+<p>jenner </p>
+</div>
 </div>
