--- a/_includes/einleitung.html
+++ b/_includes/einleitung.html
@@ -1,7 +1,7 @@
-
-<div class="container">
-<div class="row">
-<h2> Der Sommer ist zum Spaß haben da!</h2>
+<section id="about" class="about">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
 
 <p>So sieht wohl die Antwort der meisten Kids aus. Und Spaß haben sie sich nach dem langen Schuljahr auch verdient!
 
@@ -17,6 +17,9 @@ Vor allem werden wir aber auch Freundschaft und Teamgeist erleben.</p>
 
 <p>Herzliche Grüße</p>
 
-<p>jenner </p>
-</div>
-</div>
+<p>jenner </p>      </div>
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
+</section>
