--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
-<header id="top" class="header">
-  <div class="text-vertical-center">
-    <h1>WingerWinde</h1>
-    <h3>Sprache, Spass &amp; me</h3>
-    <br>
-    <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
-  </div>
+<header>
+    <div class="header-content">
+        <div class="header-content-inner">
+            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <hr>
+            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+        </div>
+    </div>
 </header>
