--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,5 +4,10 @@
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 
+<!-- Plugin JavaScript -->
+<script src="js/jquery.easing.min.js"></script>
+<script src="js/jquery.fittext.js"></script>
+<script src="js/wow.min.js"></script>
+
 <!-- Custom Theme JavaScript -->
-<script src="js/custom.js"></script> 
+<script src="js/creative.js"></script>
