--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,69 +1,42 @@
-<!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-<section id="services" class="services bg-primary">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-lg-10 col-lg-offset-1">
-        <h2>Our Services</h2>
-        <hr class="small">
+<section id="services">
+    <div class="container">
         <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-cloud fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">At Your Service</h2>
+                <hr class="primary">
             </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-compass fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-flask fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-shield fa-stack-1x text-primary"></i>
-            </span>
-              <h4>
-                <strong>Service Name</strong>
-              </h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-              <a href="#" class="btn btn-light">Learn More</a>
-            </div>
-          </div>
         </div>
-        <!-- /.row (nested) -->
-      </div>
-      <!-- /.col-lg-10 -->
     </div>
-    <!-- /.row -->
-  </div>
-  <!-- /.container -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
+                    <h3>Sturdy Templates</h3>
+                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Ready to Ship</h3>
+                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Up to Date</h3>
+                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Made with Love</h3>
+                    <p class="text-muted">You have to make your websites with love these days!</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
