--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  {% include head.html %}
+{% include head.html %}
 
-<body>
-
-  {% include navigation.html %}
+<body id="page-top">
+  {% include nav.html %}
   {% include header.html %}
-  {% include about.html %}
-  {% include einleitung.html %}
-  {% include services.html %}
-  {% include callout.html %}
-  {% include portfolio.html %}
   {% include call-to-action.html %}
-  {% include map.html %}
-  {% include footer.html %}
+  {% include services.html %}
+  {% include portfolio.html %}
+  {% include aside.html %}
+  {% include contact.html %}
   {% include scripts.html %}
-  
 </body>
 
 </html>
