--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,12 +1,68 @@
 <section class="bg-primary" id="about">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
-                <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
-            </div>
+            <div class="col-md-offset-2 col-md-6 col-sm-8">
+            <div class="col-md-6 col-sm-4"><br>
+                <img alt="" class="image-medium img-circle img-responsive" src="http://www.beelingi.me/system/files/styles/medium/private/fotos/_MG_2912%20Kopie.jpg?itok=h4I1SUvJ"></div>
+
+            <h2> Der Sommer ist zum Spaß haben da!</h2>
+
+            <p><em>So sieht wohl die Antwort der meisten Kids aus. Und Spaß haben sie sich nach dem langen Schuljahr auch verdient!</em></p>
+
+            <p><em>Wir Eltern wünschen uns dennoch für die langen Sommerferien, dass noch an den <strong>Sprachkenntnissen</strong> unserer Liebsten gefeilt werden könnte. Also kombinieren wir doch unsere Wünsche: <strong>Lernen und Spaß!</strong></em></p>
+
+            <p><em>Dass dies wirklich machbar ist, haben uns die letzten vier Jahre
+                gezeigt. Schließlich haben die Kids vor lauter guter Laune gar nicht
+                gespürt, dass sie viel gelernt haben. </em></p>
+
+            <p><em>Auf Wunsch unserer treuen Kids aus den Vorjahren geht es auch im Sommer 2017 weiter! An der Ostsee werden wir wieder <strong>tolle Freizeitaktivitäten</strong> wie Surfen, Klettern, Wasserskifahren und Paddling unternehmen.&nbsp;</em></p>
+
+            <p><em>Vor allem werden wir aber auch Freundschaft und Teamgeist erleben.</em></p>
+
+            <p><em>Ich freue mich auf den Sommer!</em></p>
+
+            <p><em>Herzliche Grüße</em></p>
+
+            <p><em>Christine Stutterheim </em></p>
+        </div>
+
+        <div class="col-md-4 col-sm-4  light small">
+            <h3>Reisetermine 2017</h3>
+
+            <h3><strong>Englisch + Spanisch</strong></h3>
+            <strong>Jetzt buchen, zum Preis von 2017</strong>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">&nbsp;</th>
+                    <th scope="col"><em>Termine 2017 </em></th>
+                    <th scope="col"><em>Tage</em></th>
+                    <th scope="col">&nbsp;</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>&nbsp;</td>
+                    <td>21.7. &nbsp;bis &nbsp;27.7.</td>
+                    <td>7</td>
+                    <td>EUR 795,-</td>
+                </tr>
+                <tr>
+                    <td>&nbsp;</td>
+                    <td>22.8. &nbsp;bis &nbsp;28.8.</td>
+                    <td>7</td>
+                    <td>EUR 795,-</td>
+                </tr>
+                </tbody>
+            </table>
+
+
+
+            <p>siehe auch:&nbsp;<a href="http://www.facebook.com/beelingi" target="_blank">www.facebook.com/beelingi</a></p>
+        </div>
+    </div>
+    </div>
+    </div></div>
         </div>
     </div>
 </section>
