--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
 
             <p><em>Wir Eltern wünschen uns dennoch für die langen Sommerferien, dass noch an den <strong>Sprachkenntnissen</strong> unserer Liebsten gefeilt werden könnte. Also kombinieren wir doch unsere Wünsche: <strong>Lernen und Spaß!</strong></em></p>
 
-            <p><em>Dass dies wirklich machbar ist, haben uns die letzten vier Jahre
+            <p><em>Dass dies wirklich machbar ist, haben uns die letzten fünf Jahre
                 gezeigt. Schließlich haben die Kids vor lauter guter Laune gar nicht
                 gespürt, dass sie viel gelernt haben. </em></p>
 
