--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,10 @@
                     <a class="page-scroll" href="#about">Vorwort</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#freizeit">Freizeit</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#unterricht">Unterricht</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
