--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,7 +7,8 @@
   {% include nav.html %}
   {% include header.html %}
   {% include about.html %}
-  {% include services.html %}
+  {% include freizeit.html %}
+  {% include unterricht.html %}
   {% include portfolio.html %}
   {% include aside.html %}
   {% include contact.html %}
