--- a/_includes/unterricht.html
+++ b/_includes/unterricht.html
@@ -28,6 +28,7 @@
             </div>
 
             <div class="row col-sm-9 col-sm-offset-2">
+                <div class="container">
                 <div class="row">
                 <div class="col-sm-4 box">
                     <p><strong>Lernen soll in vertrauensvoller Atmosphäre stattfinden</strong></p>
@@ -53,6 +54,8 @@
                         um.</p>
                 </div>
                 </div>
+                    </div>
+                <div class="container">
                 <div class="row">
                 <div class="col-sm-4 box">
                     <p><strong>Wir wollen in kleinen Lerngruppen große Erfolge erzielen</strong></p>
@@ -76,6 +79,7 @@
                         diese, wenden sie in unterschiedlichen Kontexten an und legen ein
                         Fundament für Neues.</p>
                 </div>
+                    </div>
                     </div>
             </div>
 
