--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,9 @@
                     <a class="page-scroll" href="#unterricht">Unterricht</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#warum">Warum Beelingi.me</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
                 </li>
                 <li>
