--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,6 +9,7 @@
   {% include about.html %}
   {% include freizeit.html %}
   {% include unterricht.html %}
+  {% include warum.html %}
   {% include portfolio.html %}
   {% include aside.html %}
   {% include contact.html %}
