--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,7 +8,7 @@
   {% include header.html %}
   {% include about.html %}
   {% include freizeit.html %}
-  {% include unterricht.html %}
+  {% include Unterricht.html %}
   {% include warum.html %}
   {% include portfolio.html %}
   {% include aside.html %}
