--- a/_includes/Unterricht.html
+++ b/_includes/Unterricht.html
@@ -31,7 +31,7 @@
                 <div class="container">
                 <div class="row">
                 <div class="col-sm-4 box">
-                    <p><strong>Lernen soll in vertrauensvoller Atmosphäre stattfinden</strong></p>
+                    <p><h4>Lernen soll in vertrauensvoller Atmosphäre stattfinden</h4></p>
 
                     <p>Wir bemühen uns um eine positive Lernatmosphäre, die vertrauensvoll
                         und teamorientiert ist, damit sich jedes Kind ohne Scheu frei entfalten
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="col-sm-4 box">
-                    <p><strong>Wir wollen auf jeden Schüler individuell eingehen</strong></p>
+                    <p><h4>Wir wollen auf jeden Schüler individuell eingehen</h4></p>
 
                     <p>Wir kümmern uns um jedes Kind und zielen an, auf die
                         unterschiedlichen Bedürfnisse einzugehen Inhaltlich orientieren
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="col-sm-4 box ">
-                    <p><strong>Wir freuen uns gemeinsam über erreichte Ziele</strong></p>
+                    <p><h4>Wir freuen uns gemeinsam über erreichte Ziele</h4></p>
 
                     <p>Um diese Freundschaftsatmosphäre aufzubauen, führen wir
                         Teambuildingaktivitäten durch und gehen sensibel mit Gruppenbildungen
@@ -58,14 +58,14 @@
                 <div class="container">
                 <div class="row">
                 <div class="col-sm-4 box">
-                    <p><strong>Wir wollen in kleinen Lerngruppen große Erfolge erzielen</strong></p>
+                    <p><h4>Wir wollen in kleinen Lerngruppen große Erfolge erzielen</h4></p>
 
                     <p>In kleinen Gruppen üben wir ungehemmt, punktgenau und sehr konzentriert mit dem Ziel, dass jeder
                         Schüler alle Themen versteht.</p>
                 </div>
 
                 <div class="col-sm-4 box">
-                    <p><strong>Unterricht soll abwechslungsreich gestaltet sein</strong></p>
+                    <p><h4>Unterricht soll abwechslungsreich gestaltet sein</h4></p>
 
                     <p>Wir arbeiten mit vielen unterschiedlichen Methoden, um die
                         verschiedenen Sinne anzusprechen und gehen zielgerichtet
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="col-sm-4 box ">
-                    <p><strong>Wir wollen eventuelle Lücken schließen</strong></p>
+                    <p><h4>Wir wollen eventuelle Lücken schließen</h4></p>
 
                     <p>In angepasstem Tempo wiederholen wir Themen aus dem Vorjahr, lernen
                         diese, wenden sie in unterschiedlichen Kontexten an und legen ein
@@ -82,7 +82,6 @@
                     </div>
                     </div>
             </div>
-
 
         </div>
     </div>
