--- a/_includes/warum.html
+++ b/_includes/warum.html
@@ -1,4 +1,14 @@
 <section id="warum">
+
+    <header class="main entry-header has-background" style="background-image: url(../img/warum/Surf_lang.JPG);">
+        <h1 class="entry-title">Portfolio</h1>		<hr class="short">
+				<span class="meta">
+			We do amazing stuff
+		</span>
+
+        <span class="overlay"></span>
+    </header>
+
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -19,6 +29,9 @@
                     Spaß, denn ich arbeite nach wie vor vollzeit als Lehrerin. Deshalb
                     spüren die Kinder wahrscheinlich, dass die Reisen mit Herz und
                     Engagement durchgeführt werden.</p>
+                <div class="col-lg-3 col-md-6 text-center">
+
+               </div>
             </div>
         </div>
     </div>
