--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -58,7 +58,7 @@ p {
 }
 
 section {
-    padding: 70px 0;
+    padding:  0 0 50px 0;
 }
 
 aside {
@@ -350,4 +350,16 @@ img::-moz-selection {
 body {
     -webkit-tap-highlight-color: $theme-dark;
 }
+
+header.main {
+    padding:    120px 0 !important;
+    margin-bottom: 70px !important;
+    width: 100%;
+    position: relative;
+    text-align: center;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-color: #efefef;
+    }
 
