--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<section class="bg-primary" id="about">
+<section class="big-padding bg-primary" id="about">
     <div class="container">
         <div class="row">
             <div class="col-md-offset-2 col-md-6 col-sm-8">
