--- a/_includes/freizeit.html
+++ b/_includes/freizeit.html
@@ -1,4 +1,14 @@
 <section id="freizeit">
+
+    <div id="entry" class="main entry-header has-background" style="background-image: url(../img/warum/Surf_lang.JPG);">
+        <h1 class="entry-title">Kräftemessen</h1>		<hr class="short">
+				<span class="meta">
+			We do amazing things
+		</span>
+
+        <span class="overlay"></span>
+    </div>
+
     <div class="container">
         <div class="row">
             <div class="col-md-12">
