--- a/_includes/warum.html
+++ b/_includes/warum.html
@@ -1,13 +1,13 @@
 <section id="warum">
 
-    <header class="main entry-header has-background" style="background-image: url(../img/warum/Surf_lang.JPG);">
+    <div id="entry" class="main entry-header has-background" style="background-image: url(../img/warum/Surf_lang.JPG);">
         <h1 class="entry-title">Portfolio</h1>		<hr class="short">
 				<span class="meta">
 			We do amazing stuff
 		</span>
 
         <span class="overlay"></span>
-    </header>
+    </div>
 
     <div class="container">
         <div class="row">
