--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,10 +3,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="FerienCamp 4 bis 10 Klasse. Englisch, Spanisch ">
+    <meta name="author" content="Christine Nettelbeck-Stutterheim">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Beelingi.me Sprachkurse Ferien Camp</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
