--- a/_includes/warum.html
+++ b/_includes/warum.html
@@ -1,6 +1,6 @@
 <section id="warum">
 
-    <div id="entry" class="main entry-header has-background" style="background-image: url(../img/warum/Surf_lang.JPG);">
+    <div id="entry" class="main entry-header has-background" style="background-image: url(../img/warum/schloss_noer-reitstall.jpg);">
         <h1 class="entry-title">Portfolio</h1>		<hr class="short">
 				<span class="meta">
 			We do amazing stuff
