--- a/_includes/freizeit.html
+++ b/_includes/freizeit.html
@@ -1,6 +1,6 @@
 <section id="freizeit">
 
-    <div id="entry" class="main entry-header has-background" style="background-image: url(../img/freizeit/Surf_lang.JPG);">
+    <div id="entry" class="main entry-header has-background" style="background-image: url(../img/freizeit/Surf_lang.jpg);">
         <h1 class="entry-title">Kräftemessen</h1>		<hr class="short">
 				<span class="meta">
 			We do amazing things
