--- a/_includes/Unterricht.html
+++ b/_includes/Unterricht.html
@@ -1,5 +1,5 @@
 <section id="unterricht">
-    <div id="entry" class="main entry-header has-background" style="background-image: url(../img/warum/Surf_lang.JPG);">
+    <div id="entry" class="main entry-header has-background" style="background-image: url(../img/unterricht/Unterricht_Schlossturm.jpg);">
         <h1 class="entry-title">Lernen macht Spaß</h1>		<hr class="short">
 				<span class="meta">
 			We do amazing things
