--- a/_includes/freizeit.html
+++ b/_includes/freizeit.html
@@ -1,7 +1,7 @@
 <section id="freizeit">
 
     <div id="entry" class="main entry-header has-background" style="background-image: url(../img/freizeit/Surf_lang.jpg);">
-        <h1 class="entry-title">Kräftemessen</h1>		<hr class="short">
+        <h1 class="entry-title">Jeder Tag ist ein EVENT</h1>		<hr class="short">
 				<span class="meta">
 			We do amazing things
 		</span>
@@ -13,7 +13,6 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><div class="row col-md-9 col-md-offset-2 col-sm-9 col-sm-offset-2">
-                    <h3>Jeder Tag ist ein EVENT</h3>
 
                     <h2>SprachSpaß – Die Freizeitaktivitäten</h2>
 
