--- a/_includes/warum.html
+++ b/_includes/warum.html
@@ -1,7 +1,7 @@
 <section id="warum">
 
     <div id="entry" class="main entry-header has-background" style="background-image: url(../img/warum/schloss_noer-reitstall.jpg);">
-        <h1 class="entry-title">Portfolio</h1>		<hr class="short">
+        <h1 class="entry-title">Beelingi.me</h1>		<hr class="short">
 				<span class="meta">
 			We do amazing stuff
 		</span>
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2>Warum Beelingi.me?</h2>
+                <h2>Warum mit uns?</h2>
                 <p>Vor fünf Jahren habe ich für meine damals elfjährige Tochter den idealen Sprachkurs gesucht und festgestellt, dass es den für die jüngeren Jugendlichen nicht gibt. Diese Situation gepaart mit meinem Erfahrungshintergrund haben mich inspiriert 2012 selbst eine SprachSpaß-Reise für friends & family ins Leben zu rufen.
 
                     Schließlich bin ich sowohl Lehrerin, Mutter und Lerncoach als auch ehemalige Mitarbeiterin des weltgrößten Sprachreiseverantstalters und weiß, was Kinder brauchen und Eltern sich wünschen.
