--- a/_includes/Unterricht.html
+++ b/_includes/Unterricht.html
@@ -1,14 +1,15 @@
 <section id="unterricht">
-    <div id="entry" class="main entry-header has-background" style="background-image: url(../img/unterricht/Unterricht_Schlossturm.jpg);">
-        <h1 class="entry-title">Lernen macht Spaß</h1>		<hr class="short">
+    <div id="entry" class="main entry-header has-background"
+         style="background-image: url(../img/unterricht/Unterricht_Schlossturm.jpg);">
+        <h1 class="entry-title">Lernen macht Spaß</h1>
+        <hr class="short">
 				<span class="meta">
 			We do amazing things
 		</span>
 
         <span class="overlay"></span>
-        <caption>Turm Zimmer</caption>
-    </div>
 
+    </div>
 
 
     <div class="container">
@@ -40,62 +41,59 @@
             </div>
 
             <div class="row col-sm-9 col-sm-offset-3">
-                <div class="container">
-                <div class="row">
-                <div class="col-sm-3 box">
-                    <p><h4>Lernen soll in vertrauensvoller Atmosphäre stattfinden</h4></p>
 
-                    <p>Wir bemühen uns um eine positive Lernatmosphäre, die vertrauensvoll
-                        und teamorientiert ist, damit sich jedes Kind ohne Scheu frei entfalten
-                        kann.</p>
-                </div>
+                    <div class="row">
+                        <div class="col-sm-4 box">
+                            <h4>Lernen soll in vertrauensvoller Atmosphäre stattfinden</h4>
 
-                <div class="col-sm-3 box">
-                    <p><h4>Wir wollen auf jeden Schüler individuell eingehen</h4></p>
+                            <p>Wir bemühen uns um eine positive Lernatmosphäre, die vertrauensvoll
+                                und teamorientiert ist, damit sich jedes Kind ohne Scheu frei entfalten
+                                kann.</p>
+                        </div>
 
-                    <p>Wir kümmern uns um jedes Kind und zielen an, auf die
-                        unterschiedlichen Bedürfnisse einzugehen Inhaltlich orientieren
-                        wir uns an den Anforderungen des Hamburger Rahmenlehrplans.</p>
-                </div>
+                        <div class="col-sm-4 box">
+                            <h4>Wir wollen auf jeden Schüler individuell eingehen</h4>
 
-                <div class="col-sm-3 box ">
-                    <p><h4>Wir freuen uns gemeinsam über erreichte Ziele</h4></p>
+                            <p>Wir kümmern uns um jedes Kind und zielen an, auf die
+                                unterschiedlichen Bedürfnisse einzugehen Inhaltlich orientieren
+                                wir uns an den Anforderungen des Hamburger Rahmenlehrplans.</p>
+                        </div>
 
-                    <p>Um diese Freundschaftsatmosphäre aufzubauen, führen wir
-                        Teambuildingaktivitäten durch und gehen sensibel mit Gruppenbildungen
-                        um.</p>
-                </div>
-                </div>
+                        <div class="col-sm-4 box ">
+                            <h4>Wir freuen uns gemeinsam über erreichte Ziele</h4>
+
+                            <p>Um diese Freundschaftsatmosphäre aufzubauen, führen wir
+                                Teambuildingaktivitäten durch und gehen sensibel mit Gruppenbildungen
+                                um.</p>
+                        </div>
                     </div>
-                <div class="container">
-                <div class="row">
-                <div class="col-sm-3 box">
-                    <p><h4>Wir wollen in kleinen Lerngruppen große Erfolge erzielen</h4></p>
+                    <div class="row">
+                        <div class="col-sm-4 box">
+                            <h4>Wir wollen in kleinen Lerngruppen große Erfolge erzielen</h4>
 
-                    <p>In kleinen Gruppen üben wir ungehemmt, punktgenau und sehr konzentriert mit dem Ziel, dass jeder
-                        Schüler alle Themen versteht.</p>
-                </div>
+                            <p>In kleinen Gruppen üben wir ungehemmt, punktgenau und sehr konzentriert mit dem Ziel,
+                                dass jeder
+                                Schüler alle Themen versteht.</p>
+                        </div>
 
-                <div class="col-sm-3 box">
-                    <p><h4>Unterricht soll abwechslungsreich gestaltet sein</h4></p>
+                        <div class="col-sm-4 box">
+                            <h4>Unterricht soll abwechslungsreich gestaltet sein</h4>
 
-                    <p>Wir arbeiten mit vielen unterschiedlichen Methoden, um die
-                        verschiedenen Sinne anzusprechen und gehen zielgerichtet
-                        aufunterschiedliche Lerntypen ein.</p>
-                </div>
+                            <p>Wir arbeiten mit vielen unterschiedlichen Methoden, um die
+                                verschiedenen Sinne anzusprechen und gehen zielgerichtet
+                                aufunterschiedliche Lerntypen ein.</p>
+                        </div>
 
-                <div class="col-sm-3 box ">
-                    <p><h4>Wir wollen eventuelle Lücken schließen</h4></p>
+                        <div class="col-sm-4 box ">
+                            <h4>Wir wollen eventuelle Lücken schließen</h4>
 
-                    <p>In angepasstem Tempo wiederholen wir Themen aus dem Vorjahr, lernen
-                        diese, wenden sie in unterschiedlichen Kontexten an und legen ein
-                        Fundament für Neues.</p>
-                </div>
+                            <p>In angepasstem Tempo wiederholen wir Themen aus dem Vorjahr, lernen
+                                diese, wenden sie in unterschiedlichen Kontexten an und legen ein
+                                Fundament für Neues.</p>
+                        </div>
                     </div>
-                    </div>
+                </div>
             </div>
 
-        </div>
-    </div>
 
 </section>
