--- a/_includes/about.html
+++ b/_includes/about.html
@@ -29,7 +29,7 @@
         <div class="col-md-4 col-sm-4  light small">
             <h3>Reisetermine 2017</h3>
 
-            <h3><strong>Englisch + Spanisch</strong></h3>
+            <h3>Englisch + Spanisch</h3>
             <strong>Jetzt buchen, zum Preis von 2016</strong>
             <table class="table">
                 <thead>
