--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -17,6 +17,7 @@
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>{{ site.email }}</p>
                 </a>
+                <p>schreibt an: Sprachspass + ät + beelingi + punkt + me</p>
             </div>
             <div class="col-lg-2 col-lg-offset-1 text-center">
                 <a href="https://github.com/{{ site.github_username }}">
