--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -381,3 +381,13 @@ body {
     color: #ffffff;
     }
 
+#unterricht {
+
+    @media (min-width: 768px){
+
+        .entry-header {
+            background-position: left;
+
+        }
+
+    }
