--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,7 @@
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="#contact">Kontakt</a>
                 </li>
             </ul>
         </div>
