--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -383,7 +383,7 @@ body {
 
 #unterricht {
 
-    @media (min-width: 768px){
+    @media (max-width: ;: 768px){
 
         .entry-header {
             background-position: left;
