--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -383,11 +383,12 @@ body {
 
 #unterricht {
 
-    @media (max-width: ;: 768px){
+    @media (max-width: 768px) {
 
         .entry-header {
-            background-position: left;
+            background-position: center right;
+
+            }
 
         }
-
     }
