--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -381,14 +381,14 @@ body {
     color: #ffffff;
     }
 
-#unterricht {
+#unterricht, #warum {
 
     @media (max-width: 768px) {
 
         .entry-header {
             background-position: center right;
-
             }
-
         }
     }
+
+
