--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
             </div>
             <div class="col-lg-2 col-lg-offset-2 text-center">
                 <a href="http://www.facebook.com/beelingi" target="_blank">
-                    <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                    <i class="fa fa-facebook-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 </a>
             </div>
             <div class="col-lg-2 col-lg-offset-1 text-center">
