--- a/_includes/freizeit.html
+++ b/_includes/freizeit.html
@@ -1,7 +1,7 @@
 <section id="freizeit">
 
     <div id="entry" class="main entry-header has-background" style="background-image: url(../img/freizeit/Surf_lang.jpg);">
-        <h1 class="entry-title">Jeder Tag ist ein EVENT</h1>		<hr class="short">
+        <h1 class="entry-title">Jeder Tag ist ein Event</h1>		<hr class="short">
 				<span class="meta">
 			We do amazing things
 		</span>
@@ -14,7 +14,7 @@
             <div class="col-md-12">
                 <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><div class="row col-md-9 col-md-offset-2 col-sm-9 col-sm-offset-2">
 
-                    <h2>SprachSpaß – Die Freizeitaktivitäten</h2>
+                    <h2>Freizeit: We do amazing things</h2>
 
                     <div class="col-md-6 col-sm-12">
                         <p>Nachmittags unternehmen wir unvergessliche Aktionen mit
@@ -29,9 +29,8 @@
                             zurück.</p>
 
 
-                        <p>In der Vergangenheit waren wir zum Beispiel im<strong>Klettergarten</strong>, <strong>Surfen</strong>, <strong>Kuttersegeln&nbsp;</strong>und <strong>Floß</strong>
-                            bauen. Diese und andere Aktionen stehen auch für dieses Jahr wieder zur
-                            Option. Die Aktivitäten sind mit dem Ziel ausgesucht worden,
+                        <p>In 2016 waren wir zum Beispiel im <strong>Klettergarten</strong>, <strong>Surfen</strong>, <strong>Katamarnsegeln, Motorboot fahren &nbsp;</strong>und <strong>Stand-Up-Paddling</strong>
+                            bauen. Da die Aktionen allen super gefallen haben, stehen sie auch für dieses Jahr wieder auf dem Plan. Die Aktivitäten sind mit dem Ziel ausgesucht worden,
                             teamfördernd und selbstbewusstseinsstärkend zu sein</p>
 
 
@@ -41,7 +40,7 @@
                         Regen statt. Bei sehr extrem schlechtem Wetter wie z.B. Starkwind findet
                         ein Alternativprogramm statt.</p>
 
-                        <p>Die körperlichen Herausforderungen und Erfolgserlebnisse stärken u.A. den Geist und den Spirit für das tägliche Lernen.&nbsp;</p>
+                        <p>Die körperlichen Herausforderungen und Erfolgserlebnisse stärken den Geist und unterstützen den Spirit für das tägliche Lernen.&nbsp;</p>
 
 
                     </div>
